Ha! Found another margin issue (code snippet wrapped in pre)

--- a/dev/assets/scss/layout/main.scss
+++ b/dev/assets/scss/layout/main.scss
@@ -140,6 +140,7 @@ main {
         }
         pre {
             white-space: pre-wrap;
+            margin-bottom: $margin-regular;
 
             code {
                 background-color: $background-code;
